src/translator/OpenQASM3/gen/OpenQASM3Parser.cpp

// Generated from /Users/mitsuishikaito/my_quantum_simulator_with_gpu/src/translator/OpenQASM3/OpenQASM3.g4 by ANTLR 4.13.2


#include "OpenQASM3Visitor.h"

#include "OpenQASM3Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct OpenQASM3ParserStaticData final {
  OpenQASM3ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  OpenQASM3ParserStaticData(const OpenQASM3ParserStaticData&) = delete;
  OpenQASM3ParserStaticData(OpenQASM3ParserStaticData&&) = delete;
  OpenQASM3ParserStaticData& operator=(const OpenQASM3ParserStaticData&) = delete;
  OpenQASM3ParserStaticData& operator=(OpenQASM3ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag openqasm3ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<OpenQASM3ParserStaticData> openqasm3ParserStaticData = nullptr;

void openqasm3ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (openqasm3ParserStaticData != nullptr) {
    return;
  }
#else
  assert(openqasm3ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<OpenQASM3ParserStaticData>(
    std::vector<std::string>{
      "program", "version", "includeStmt", "statement", "qregDecl", "cregDecl", 
      "gateStmt", "paramList", "expr", "gateName", "gateArgs", "qubit", 
      "measureStmt", "barrierStmt", "qubitList"
    },
    std::vector<std::string>{
      "", "'OPENQASM'", "'include'", "'qreg'", "'creg'", "'*'", "'/'", "'+'", 
      "'-'", "'->'", "'gphase'", "'id'", "", "'x'", "'y'", "'z'", "'sx'", 
      "'h'", "'s'", "'sdg'", "'t'", "'tdg'", "'rx'", "'ry'", "'rz'", "'cx'", 
      "'cy'", "'cz'", "", "'crx'", "'cry'", "'crz'", "'ch'", "'cu'", "'swap'", 
      "'ccx'", "'cswap'", "'u1'", "'u2'", "'u3'", "'reset'", "'barrier'", 
      "'measure'", "'pi'", "", "", "", "", "'['", "']'", "'('", "')'", "','", 
      "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "GPHASE", "ID", "P", "X", 
      "Y", "Z", "SX", "H", "S", "SDG", "T", "TDG", "RX", "RY", "RZ", "CX", 
      "CY", "CZ", "CP", "CRX", "CRY", "CRZ", "CH", "CU", "SWAP", "CCX", 
      "CSWAP", "U1", "U2", "U3", "RESET", "BARRIER", "MEASURE", "PI", "DECIMAL", 
      "NUMBER", "IDSTR", "STRING", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
      "COMMA", "SEMICOLON", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  openqasm3ParserStaticData = std::move(staticData);
}

}

OpenQASM3Parser::OpenQASM3Parser(TokenStream *input) : OpenQASM3Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

OpenQASM3Parser::OpenQASM3Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  OpenQASM3Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *openqasm3ParserStaticData->atn, openqasm3ParserStaticData->decisionToDFA, openqasm3ParserStaticData->sharedContextCache, options);
}

OpenQASM3Parser::~OpenQASM3Parser() {
  delete _interpreter;
}

const atn::ATN& OpenQASM3Parser::getATN() const {
  return *openqasm3ParserStaticData->atn;
}

std::string OpenQASM3Parser::getGrammarFileName() const {
  return "OpenQASM3.g4";
}

const std::vector<std::string>& OpenQASM3Parser::getRuleNames() const {
  return openqasm3ParserStaticData->ruleNames;
}

const dfa::Vocabulary& OpenQASM3Parser::getVocabulary() const {
  return openqasm3ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView OpenQASM3Parser::getSerializedATN() const {
  return openqasm3ParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

OpenQASM3Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OpenQASM3Parser::VersionContext* OpenQASM3Parser::ProgramContext::version() {
  return getRuleContext<OpenQASM3Parser::VersionContext>(0);
}

tree::TerminalNode* OpenQASM3Parser::ProgramContext::SEMICOLON() {
  return getToken(OpenQASM3Parser::SEMICOLON, 0);
}

std::vector<OpenQASM3Parser::IncludeStmtContext *> OpenQASM3Parser::ProgramContext::includeStmt() {
  return getRuleContexts<OpenQASM3Parser::IncludeStmtContext>();
}

OpenQASM3Parser::IncludeStmtContext* OpenQASM3Parser::ProgramContext::includeStmt(size_t i) {
  return getRuleContext<OpenQASM3Parser::IncludeStmtContext>(i);
}

std::vector<OpenQASM3Parser::StatementContext *> OpenQASM3Parser::ProgramContext::statement() {
  return getRuleContexts<OpenQASM3Parser::StatementContext>();
}

OpenQASM3Parser::StatementContext* OpenQASM3Parser::ProgramContext::statement(size_t i) {
  return getRuleContext<OpenQASM3Parser::StatementContext>(i);
}


size_t OpenQASM3Parser::ProgramContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleProgram;
}


std::any OpenQASM3Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::ProgramContext* OpenQASM3Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, OpenQASM3Parser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(OpenQASM3Parser::T__0);
    setState(31);
    version();
    setState(32);
    match(OpenQASM3Parser::SEMICOLON);
    setState(36);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OpenQASM3Parser::T__1) {
      setState(33);
      includeStmt();
      setState(38);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7696581393432) != 0)) {
      setState(39);
      statement();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

OpenQASM3Parser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OpenQASM3Parser::VersionContext::DECIMAL() {
  return getToken(OpenQASM3Parser::DECIMAL, 0);
}

tree::TerminalNode* OpenQASM3Parser::VersionContext::NUMBER() {
  return getToken(OpenQASM3Parser::NUMBER, 0);
}


size_t OpenQASM3Parser::VersionContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleVersion;
}


std::any OpenQASM3Parser::VersionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitVersion(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::VersionContext* OpenQASM3Parser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 2, OpenQASM3Parser::RuleVersion);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _la = _input->LA(1);
    if (!(_la == OpenQASM3Parser::DECIMAL

    || _la == OpenQASM3Parser::NUMBER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeStmtContext ------------------------------------------------------------------

OpenQASM3Parser::IncludeStmtContext::IncludeStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OpenQASM3Parser::IncludeStmtContext::STRING() {
  return getToken(OpenQASM3Parser::STRING, 0);
}

tree::TerminalNode* OpenQASM3Parser::IncludeStmtContext::SEMICOLON() {
  return getToken(OpenQASM3Parser::SEMICOLON, 0);
}


size_t OpenQASM3Parser::IncludeStmtContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleIncludeStmt;
}


std::any OpenQASM3Parser::IncludeStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitIncludeStmt(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::IncludeStmtContext* OpenQASM3Parser::includeStmt() {
  IncludeStmtContext *_localctx = _tracker.createInstance<IncludeStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, OpenQASM3Parser::RuleIncludeStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(OpenQASM3Parser::T__1);
    setState(48);
    match(OpenQASM3Parser::STRING);
    setState(49);
    match(OpenQASM3Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

OpenQASM3Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OpenQASM3Parser::QregDeclContext* OpenQASM3Parser::StatementContext::qregDecl() {
  return getRuleContext<OpenQASM3Parser::QregDeclContext>(0);
}

OpenQASM3Parser::CregDeclContext* OpenQASM3Parser::StatementContext::cregDecl() {
  return getRuleContext<OpenQASM3Parser::CregDeclContext>(0);
}

OpenQASM3Parser::GateStmtContext* OpenQASM3Parser::StatementContext::gateStmt() {
  return getRuleContext<OpenQASM3Parser::GateStmtContext>(0);
}

OpenQASM3Parser::MeasureStmtContext* OpenQASM3Parser::StatementContext::measureStmt() {
  return getRuleContext<OpenQASM3Parser::MeasureStmtContext>(0);
}

OpenQASM3Parser::BarrierStmtContext* OpenQASM3Parser::StatementContext::barrierStmt() {
  return getRuleContext<OpenQASM3Parser::BarrierStmtContext>(0);
}


size_t OpenQASM3Parser::StatementContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleStatement;
}


std::any OpenQASM3Parser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::StatementContext* OpenQASM3Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, OpenQASM3Parser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OpenQASM3Parser::T__2: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        qregDecl();
        break;
      }

      case OpenQASM3Parser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        cregDecl();
        break;
      }

      case OpenQASM3Parser::GPHASE:
      case OpenQASM3Parser::ID:
      case OpenQASM3Parser::P:
      case OpenQASM3Parser::X:
      case OpenQASM3Parser::Y:
      case OpenQASM3Parser::Z:
      case OpenQASM3Parser::SX:
      case OpenQASM3Parser::H:
      case OpenQASM3Parser::S:
      case OpenQASM3Parser::SDG:
      case OpenQASM3Parser::T:
      case OpenQASM3Parser::TDG:
      case OpenQASM3Parser::RX:
      case OpenQASM3Parser::RY:
      case OpenQASM3Parser::RZ:
      case OpenQASM3Parser::CX:
      case OpenQASM3Parser::CY:
      case OpenQASM3Parser::CZ:
      case OpenQASM3Parser::CP:
      case OpenQASM3Parser::CRX:
      case OpenQASM3Parser::CRY:
      case OpenQASM3Parser::CRZ:
      case OpenQASM3Parser::CH:
      case OpenQASM3Parser::CU:
      case OpenQASM3Parser::SWAP:
      case OpenQASM3Parser::CCX:
      case OpenQASM3Parser::CSWAP:
      case OpenQASM3Parser::U1:
      case OpenQASM3Parser::U2:
      case OpenQASM3Parser::U3: {
        enterOuterAlt(_localctx, 3);
        setState(53);
        gateStmt();
        break;
      }

      case OpenQASM3Parser::MEASURE: {
        enterOuterAlt(_localctx, 4);
        setState(54);
        measureStmt();
        break;
      }

      case OpenQASM3Parser::BARRIER: {
        enterOuterAlt(_localctx, 5);
        setState(55);
        barrierStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QregDeclContext ------------------------------------------------------------------

OpenQASM3Parser::QregDeclContext::QregDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OpenQASM3Parser::QregDeclContext::IDSTR() {
  return getToken(OpenQASM3Parser::IDSTR, 0);
}

tree::TerminalNode* OpenQASM3Parser::QregDeclContext::LBRACKET() {
  return getToken(OpenQASM3Parser::LBRACKET, 0);
}

tree::TerminalNode* OpenQASM3Parser::QregDeclContext::NUMBER() {
  return getToken(OpenQASM3Parser::NUMBER, 0);
}

tree::TerminalNode* OpenQASM3Parser::QregDeclContext::RBRACKET() {
  return getToken(OpenQASM3Parser::RBRACKET, 0);
}

tree::TerminalNode* OpenQASM3Parser::QregDeclContext::SEMICOLON() {
  return getToken(OpenQASM3Parser::SEMICOLON, 0);
}


size_t OpenQASM3Parser::QregDeclContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleQregDecl;
}


std::any OpenQASM3Parser::QregDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitQregDecl(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::QregDeclContext* OpenQASM3Parser::qregDecl() {
  QregDeclContext *_localctx = _tracker.createInstance<QregDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, OpenQASM3Parser::RuleQregDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(OpenQASM3Parser::T__2);
    setState(59);
    match(OpenQASM3Parser::IDSTR);
    setState(60);
    match(OpenQASM3Parser::LBRACKET);
    setState(61);
    match(OpenQASM3Parser::NUMBER);
    setState(62);
    match(OpenQASM3Parser::RBRACKET);
    setState(63);
    match(OpenQASM3Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CregDeclContext ------------------------------------------------------------------

OpenQASM3Parser::CregDeclContext::CregDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OpenQASM3Parser::CregDeclContext::IDSTR() {
  return getToken(OpenQASM3Parser::IDSTR, 0);
}

tree::TerminalNode* OpenQASM3Parser::CregDeclContext::LBRACKET() {
  return getToken(OpenQASM3Parser::LBRACKET, 0);
}

tree::TerminalNode* OpenQASM3Parser::CregDeclContext::NUMBER() {
  return getToken(OpenQASM3Parser::NUMBER, 0);
}

tree::TerminalNode* OpenQASM3Parser::CregDeclContext::RBRACKET() {
  return getToken(OpenQASM3Parser::RBRACKET, 0);
}

tree::TerminalNode* OpenQASM3Parser::CregDeclContext::SEMICOLON() {
  return getToken(OpenQASM3Parser::SEMICOLON, 0);
}


size_t OpenQASM3Parser::CregDeclContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleCregDecl;
}


std::any OpenQASM3Parser::CregDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitCregDecl(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::CregDeclContext* OpenQASM3Parser::cregDecl() {
  CregDeclContext *_localctx = _tracker.createInstance<CregDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, OpenQASM3Parser::RuleCregDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(OpenQASM3Parser::T__3);
    setState(66);
    match(OpenQASM3Parser::IDSTR);
    setState(67);
    match(OpenQASM3Parser::LBRACKET);
    setState(68);
    match(OpenQASM3Parser::NUMBER);
    setState(69);
    match(OpenQASM3Parser::RBRACKET);
    setState(70);
    match(OpenQASM3Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateStmtContext ------------------------------------------------------------------

OpenQASM3Parser::GateStmtContext::GateStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OpenQASM3Parser::GateNameContext* OpenQASM3Parser::GateStmtContext::gateName() {
  return getRuleContext<OpenQASM3Parser::GateNameContext>(0);
}

OpenQASM3Parser::GateArgsContext* OpenQASM3Parser::GateStmtContext::gateArgs() {
  return getRuleContext<OpenQASM3Parser::GateArgsContext>(0);
}

tree::TerminalNode* OpenQASM3Parser::GateStmtContext::SEMICOLON() {
  return getToken(OpenQASM3Parser::SEMICOLON, 0);
}

tree::TerminalNode* OpenQASM3Parser::GateStmtContext::LPAREN() {
  return getToken(OpenQASM3Parser::LPAREN, 0);
}

tree::TerminalNode* OpenQASM3Parser::GateStmtContext::RPAREN() {
  return getToken(OpenQASM3Parser::RPAREN, 0);
}

OpenQASM3Parser::ParamListContext* OpenQASM3Parser::GateStmtContext::paramList() {
  return getRuleContext<OpenQASM3Parser::ParamListContext>(0);
}


size_t OpenQASM3Parser::GateStmtContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleGateStmt;
}


std::any OpenQASM3Parser::GateStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitGateStmt(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::GateStmtContext* OpenQASM3Parser::gateStmt() {
  GateStmtContext *_localctx = _tracker.createInstance<GateStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, OpenQASM3Parser::RuleGateStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    gateName();
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == OpenQASM3Parser::LPAREN) {
      setState(73);
      match(OpenQASM3Parser::LPAREN);
      setState(75);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1257841302175744) != 0)) {
        setState(74);
        paramList();
      }
      setState(77);
      match(OpenQASM3Parser::RPAREN);
    }
    setState(80);
    gateArgs();
    setState(81);
    match(OpenQASM3Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

OpenQASM3Parser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OpenQASM3Parser::ExprContext *> OpenQASM3Parser::ParamListContext::expr() {
  return getRuleContexts<OpenQASM3Parser::ExprContext>();
}

OpenQASM3Parser::ExprContext* OpenQASM3Parser::ParamListContext::expr(size_t i) {
  return getRuleContext<OpenQASM3Parser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> OpenQASM3Parser::ParamListContext::COMMA() {
  return getTokens(OpenQASM3Parser::COMMA);
}

tree::TerminalNode* OpenQASM3Parser::ParamListContext::COMMA(size_t i) {
  return getToken(OpenQASM3Parser::COMMA, i);
}


size_t OpenQASM3Parser::ParamListContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleParamList;
}


std::any OpenQASM3Parser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

OpenQASM3Parser::ParamListContext* OpenQASM3Parser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 14, OpenQASM3Parser::RuleParamList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    expr(0);
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OpenQASM3Parser::COMMA) {
      setState(84);
      match(OpenQASM3Parser::COMMA);
      setState(85);
      expr(0);
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

OpenQASM3Parser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::LPAREN() {
  return getToken(OpenQASM3Parser::LPAREN, 0);
}

std::vector<OpenQASM3Parser::ExprContext *> OpenQASM3Parser::ExprContext::expr() {
  return getRuleContexts<OpenQASM3Parser::ExprContext>();
}

OpenQASM3Parser::ExprContext* OpenQASM3Parser::ExprContext::expr(size_t i) {
  return getRuleContext<OpenQASM3Parser::ExprContext>(i);
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::RPAREN() {
  return getToken(OpenQASM3Parser::RPAREN, 0);
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::DECIMAL() {
  return getToken(OpenQASM3Parser::DECIMAL, 0);
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::NUMBER() {
  return getToken(OpenQASM3Parser::NUMBER, 0);
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::PI() {
  return getToken(OpenQASM3Parser::PI, 0);
}

tree::TerminalNode* OpenQASM3Parser::ExprContext::IDSTR() {
  return getToken(OpenQASM3Parser::IDSTR, 0);
}


size_t OpenQASM3Parser::ExprContext::getRuleIndex() const {
  return OpenQASM3Parser::RuleExpr;
}


std::any OpenQASM3Parser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OpenQASM3Visitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


OpenQASM3Parser::ExprContext* OpenQASM3Parser::expr() {
   return expr(0);
}

OpenQASM3Parser::ExprContext* OpenQASM3Parser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  OpenQASM3Parser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  OpenQASM3Parser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, OpenQASM3Parser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OpenQASM3Parser::LPAREN: {
        setState(92);
        match(OpenQASM3Parser::LPAREN);
        setState(93);
        expr(0);
        setState(94);
        match(OpenQASM3Parser::RPAREN);
        break;
      }

      case OpenQASM3Parser::DECIMAL: {
        setState(96);
        match(OpenQASM3Parser::DECIMAL);
        break;
      }

      case OpenQASM3Parser::NUMBER: {
        setState(97);
        match(OpenQASM3Parser::NUMBER);
        break;
      }

      case OpenQASM3Parser::PI: {
        setState(98);
        match(OpenQASM3Parser::PI);
        break;
      }

      case OpenQASM3Parser::IDSTR: {
        setState(99);
        match(OpenQASM3Parser::IDSTR);
        break;
      }
